--- a/Playbook.yml
+++ b/Playbook.yml
@@ -1,26 +1,17 @@
-- name: test play
-  hosts: awsami
-  become: true
+- name: setup a website on linux server
+  host:
+  become: yes
   tasks:
-    - name: create a directory
-      command: mkdir test creates=test
-    - name: read a file
-      command: cat hosts chdir=/etc
-    - name: copy a file
-      copy:
-        src: ~/hosts
-        dest: /tmp
-        owner: ec2-user
-        mode: 0600
-    - name: Installing httpd on AWSAMI  # sudo yum install httpd -y
-      yum:
-        name: httpd
-        state: present
-          #become: true
-    - name: starting httpd
-      service:
-        name: httpd
+    - name: install appache
+      yum: 
+      name: httpd
+      state: present
+    - name: httpd
+      services: present
+        name: start
         state: started
         enabled: true
-    - name: cloning foodapp source code to my /var/www/html
-      command: cd /var/www/html && git clone https://github.com/saiurakrishna/food-app.git
+    - name: copy a file into /var/www/html
+      shell: cd /var/www/html && echo "hello world" > index.html
+      
+
